# fastx_toolkit

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README  README.md  config.h.in  configure.ac  reconf
scripts/: CMakeLists.txt
src/: CMakeLists.txt
src/fasta_formatter/: CMakeLists.txt  fasta_formatter.cpp
src/fasta_nucleotide_changer/: CMakeLists.txt
src/fastq_masker/: CMakeLists.txt
src/fastq_quality_converter/: CMakeLists.txt
src/fastq_quality_filter/: CMakeLists.txt
src/fastq_quality_trimmer/: CMakeLists.txt
src/fastq_to_fasta/: CMakeLists.txt
src/fastx_artifacts_filter/: CMakeLists.txt
src/fastx_clipper/: CMakeLists.txt
src/fastx_collapser/: CMakeLists.txt
src/fastx_quality_stats/: CMakeLists.txt
src/fastx_renamer/: CMakeLists.txt
src/fastx_reverse_complement/: CMakeLists.txt
src/fastx_trimmer/: CMakeLists.txt
src/fastx_uncollapser/: CMakeLists.txt
src/libfastx/: CMakeLists.txt  fastx.h
src/seqalign_test/: CMakeLists.txt
