#add_executable(fasta_clipping_histogram
#    fasta_clipping_histogram.pl
#    )
#add_executable(fastq_quality_boxplot_graph
#    fastq_quality_boxplot_graph.sh
#    )
#add_executable(fastx_barcode_splitter
#    fastx_barcode_splitter.pl
#    )
#add_executable(fastx_nucleotide_distribution_graph
#    fastx_nucleotide_distribution_graph.sh
#    )
#add_executable(fastx_nucleotide_distribution_line_graph
#    fastx_nucleotide_distribution_line_graph.sh
#    )

